add_library(rt_library)

target_sources(
        rt_library
        PRIVATE
        sources/ext/lodepng.cpp
        sources/core/image.cpp
        sources/core/core.cpp
        sources/core/point_2.cpp
        sources/core/vector_2.cpp
        sources/core/point_3.cpp
        sources/core/vector_3.cpp
        sources/core/normal_3.cpp
        sources/core/bounds_2.cpp
        sources/core/ray.cpp
        sources/core/matrix_4_4.cpp
        sources/core/transform.cpp
        sources/core/interaction.cpp
        sources/core/surface_interaction.cpp
        sources/core/shape.cpp
        sources/core/camera.cpp
        sources/core/camera_sample.cpp
        sources/core/film.cpp
        sources/shapes/sphere.cpp
        sources/utils/timer.cpp
)

target_include_directories(
        rt_library
        PUBLIC
        includes/core
        includes/shapes
        includes/ext
        includes/utils
        inline/core
        inline/shapes
        inline/utils
)